Added Sections to Resume

--- a/src/main.tex
+++ b/src/main.tex
@@ -1,12 +1,111 @@
-\documentclass{article}
-\title{Resume}
-\author{Ryan Shuck}
-\date{August 2024}
+\documentclass[12pt, oneside, a4paper]{article}
+
+\usepackage{geometry}
+\usepackage{color}
+\usepackage{titlesec}
+
+\titleformat{\section}{\color{blue}\normalfont\small\bfseries}{\color{blue}\thesection}{1em}{}
+
 \begin{document}
-    \maketitle
-    Hello World!
-    \section{Contact}
-    Address:
-    Phone:
-    Email:
+  
+
+    \section*{Contact Info:}
+    Address: Sttiville, NY 13469
+    \newline
+    Phone: 315-709-4529
+    \newline
+    Email: shucksterbomb@gmail.com
+    \newline
+
+    \noindent
+    {\color{blue} \rule{\linewidth}{1mm}}
+
+    \section*{Websites, Portfolios, Profiles}
+    \begin{itemize}
+        \item https://www.linkedin.com/in/ryanshuck/
+        \item https://github.com/shuckster87
+    \end{itemize}
+
+    \section*{Education:}
+    \begin{itemize}
+    \item B.S, Computer Science  (GPA: 3.30)
+    SUNY Polytechnic Institute - Utica, NY
+    \item Minor, Game Design
+    SUNY Polytechnic Institute - Utica, NY
+    \end{itemize}
+
+    \section*{Objective:}
+    Computer Science graduate with a B.S from SUNY Polytechnic Institute in pursuit of a full-time, entry-level position that allows me to showcase my skills while gaining on-the-job experience.
+
+    \section*{Skills:}
+    \begin{itemize}
+    \item C
+    \item C++
+    \item Java
+    \item CSharp
+    \item Rust
+    \item Lua
+    \item Python
+    \item Virtualization with VMWare/Virtual Box
+    \item Linux
+    \item Windows
+    \item PostgreSQL
+    \item Problem Solving
+    \item TroubleShooting
+    \item Machine Learning
+    \item LaTeX
+    \end{itemize}
+
+    \section*{Certifications:}
+    \begin{itemize}
+    \item Technical Support Fundamentals 
+        \begin{itemize}
+            \item Google (Coursera)
+        \end{itemize}
+    \item The Bits and Bytes of Computer Networking
+        \begin{itemize}
+            \item Google (Coursera) 
+        \end{itemize}
+    \item Operating Systems and You: Becoming a Power User
+        \begin{itemize}
+            \item Google (Coursera) 
+        \end{itemize}
+    \item Supervised Machine Learning: Classification and Regression
+        \begin{itemize}
+            \item DeepLearning.AI, Stanford University (Coursera)
+        \end{itemize}
+    \item Advanced Learning Algorithms
+        \begin{itemize}
+            \item DeepLearning.AI, Stanford University (Coursera)
+        \end{itemize}
+    \item Unsupervised Learning, Recommenders, Reinforcement Learning
+        \begin{itemize}
+            \item DeepLearning.AI, Stanford University (Coursera)
+        \end{itemize}
+    \item Machine Learning Specialization
+        \begin{itemize}
+            \item DeepLearning.AI, Stanford University (Coursera)
+        \end{itemize}
+    \end{itemize}
+
+    \section*{Relevant Courses:}
+    \begin{itemize}
+        \item CS240 - Data Structures and Algorithms
+        \item CS249 - Object Oriented Programming
+        \item CS330 - Operating Systems and Networking
+        \item CS350 - Information and Knowledge Management
+        \item CS370 - Software Engineering
+        \item CS431 - Principles Programming Languages
+        \item CS441 - Computer System Architecture
+        \item CS495 - Artifical Intelligence
+    \end{itemize}
+
+    \section*{Projects:}
+    \begin{itemize}
+        \item WeConnect
+            \begin{itemize}
+                \item Full stack messaging application that uses JavaScript, React, Express, NodeJS, and MongoDB
+            \end{itemize}
+    \end{itemize}
+
 \end{document}
