Added Font Size to Items in Each Section

--- a/src/main.tex
+++ b/src/main.tex
@@ -6,6 +6,8 @@
 
 \titleformat{\section}{\color{blue}\normalfont\small\bfseries}{\color{blue}\thesection}{1em}{}
 
+\flushbottom
+
 \begin{document}
   
 
@@ -22,12 +24,14 @@
 
     \section*{Websites, Portfolios, Profiles}
     \begin{itemize}
+    \scriptsize
         \item https://www.linkedin.com/in/ryanshuck/
         \item https://github.com/shuckster87
     \end{itemize}
 
     \section*{Education:}
     \begin{itemize}
+    \scriptsize
     \item B.S, Computer Science  (GPA: 3.30)
     SUNY Polytechnic Institute - Utica, NY
     \item Minor, Game Design
@@ -39,6 +43,7 @@
 
     \section*{Skills:}
     \begin{itemize}
+    \footnotesize
     \item C
     \item C++
     \item Java
@@ -58,6 +63,7 @@
 
     \section*{Certifications:}
     \begin{itemize}
+    \scriptsize
     \item Technical Support Fundamentals 
         \begin{itemize}
             \item Google (Coursera)
@@ -90,6 +96,7 @@
 
     \section*{Relevant Courses:}
     \begin{itemize}
+    \scriptsize
         \item CS240 - Data Structures and Algorithms
         \item CS249 - Object Oriented Programming
         \item CS330 - Operating Systems and Networking
@@ -102,10 +109,13 @@
 
     \section*{Projects:}
     \begin{itemize}
+    \scriptsize
+
         \item WeConnect
             \begin{itemize}
                 \item Full stack messaging application that uses JavaScript, React, Express, NodeJS, and MongoDB
             \end{itemize}
-    \end{itemize}
+    \end{itemize} 
+   
 
 \end{document}
