Readjusted Skills Section and Education Section

--- a/src/main.tex
+++ b/src/main.tex
@@ -9,15 +9,15 @@
 \flushbottom
 
 \begin{document}
-  
-
+    \begin{flushleft}
     \section*{Contact Info:}
-    Address: Sttiville, NY 13469
+    \footnotesize
+    Address: Stittville, NY 13469
     \newline
     Phone: 315-709-4529
     \newline
-    Email: shucksterbomb@gmail.com
-    \newline
+    Email: shucksterbomb@gmail.com     
+    \end{flushleft}
 
     \noindent
     {\color{blue} \rule{\linewidth}{1mm}}
@@ -33,32 +33,48 @@
     \begin{itemize}
     \scriptsize
     \item B.S, Computer Science  (GPA: 3.30)
-    SUNY Polytechnic Institute - Utica, NY
-    \item Minor, Game Design
-    SUNY Polytechnic Institute - Utica, NY
+        \begin{itemize}
+            \item SUNY Polytechnic Institute - Utica, NY
+        \end{itemize}
+    \item Minor, Game Design (GPA: 3.40)
+        \begin{itemize}
+            \item SUNY Polytechnic Institute - Utica, NY
+        \end{itemize}
+
     \end{itemize}
 
     \section*{Objective:}
-    Computer Science graduate with a B.S from SUNY Polytechnic Institute in pursuit of a full-time, entry-level position that allows me to showcase my skills while gaining on-the-job experience.
+    \begin{flushleft}
+        \footnotesize
+        Computer Science graduate with a B.S from SUNY Polytechnic Institute in pursuit of a full-time, entry-level position that allows me to showcase my skills while gaining on-the-job experience. 
+    \end{flushleft}
+   
 
     \section*{Skills:}
     \begin{itemize}
-    \footnotesize
-    \item C
-    \item C++
-    \item Java
-    \item CSharp
-    \item Rust
-    \item Lua
-    \item Python
-    \item Virtualization with VMWare/Virtual Box
-    \item Linux
-    \item Windows
-    \item PostgreSQL
+    \scriptsize
+    \item Programming Languages:
+        \begin{itemize}
+            \item C, C++, Java, CSharp, Rust, Lua, Python
+        \end{itemize}
+    \item Operating Systems:
+        \begin{itemize}
+            \item Linux, Windows
+        \end{itemize}
+    \item Tools:
+        \begin{itemize}
+            \item Virtualization with VMWare/Virtual Box
+            \item LaTeX
+        \end{itemize}
+    \item Database Tools:
+        \begin{itemize}
+            \item PostgreSQL
+            \item MongoDB
+        \end{itemize}
     \item Problem Solving
     \item TroubleShooting
     \item Machine Learning
-    \item LaTeX
+
     \end{itemize}
 
     \section*{Certifications:}
@@ -110,12 +126,11 @@
     \section*{Projects:}
     \begin{itemize}
     \scriptsize
-
         \item WeConnect
             \begin{itemize}
                 \item Full stack messaging application that uses JavaScript, React, Express, NodeJS, and MongoDB
             \end{itemize}
+        \item Resume 
     \end{itemize} 
-   
 
 \end{document}
