Added Name to Resume

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,13 +2,18 @@
 
 \usepackage{geometry}
 \usepackage{color}
-\usepackage{titlesec}
+\usepackage[compact]{titlesec}
 
 \titleformat{\section}{\color{blue}\normalfont\small\bfseries}{\color{blue}\thesection}{1em}{}
+% \titlespacing{\section}{0pt}{*0}{*0}
 
 \flushbottom
 
 \begin{document}
+    \begin{flushleft}
+        \Huge\color{blue} Ryan Shuck   
+    \end{flushleft}
+
     \begin{flushleft}
     \section*{Contact Info:}
     \footnotesize
@@ -46,7 +51,7 @@
     \section*{Objective:}
     \begin{flushleft}
         \footnotesize
-        Computer Science graduate with a B.S from SUNY Polytechnic Institute in pursuit of a full-time, entry-level position that allows me to showcase my skills while gaining on-the-job experience. 
+        Computer Science graduate in pursuit of a full-time, entry-level position that allows me to showcase my skills while gaining on-the-job experience. 
     \end{flushleft}
    
 
