Removed Page Numbers

--- a/src/main.tex
+++ b/src/main.tex
@@ -7,7 +7,7 @@
 \titleformat{\section}{\color{blue}\normalfont\small\bfseries}{\color{blue}\thesection}{1em}{}
 % \titlespacing{\section}{0pt}{*0}{*0}
 
-\flushbottom
+\pagestyle{empty}
 
 \begin{document}
     \begin{flushleft}
