Added experience section to resume

--- a/src/main.tex
+++ b/src/main.tex
@@ -65,6 +65,18 @@
     and continuously enhance my technical skills.
 \end{flushleft}
 
+\section*{Experience:}
+\begin{flushleft}
+    \footnotesize
+    \begin{itemize}
+        \footnotesize
+        \item Software Engineer I
+            \begin{itemize}
+                \item Date Started: November 18th, 2024
+            \end{itemize}
+    \end{itemize}
+\end{flushleft}
+
 \begin{paracol}{2}
     \begin{leftcolumn}
         \section*{Skills:}
